test/fail/M0252.mo
import Mixin "mixins/Counter";

module {
  class C() {
    include Mixin();
  };

  include Mixin();
}
